--- a/ContactUs.html
+++ b/ContactUs.html
@@ -10,7 +10,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand">TechSystem</a>
+      <a href="index.html" class="navbar-brand">TechSystem</a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
     <span class="sr-only">Toggle Navigation</span>
     <span class="icon-bar"></span>
