--- a/ContactUs.html
+++ b/ContactUs.html
@@ -21,7 +21,7 @@
     </button>
     </div>
          <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-           <li><a href="index.html">Home</a></li>
+           <li><a href="/">Home</a></li>
            <li><a href="ContactUs.html">Contact US</a></li>
            <li>
              <a href="" data-toggle="dropdown">About US<i class="caret"></i></a>
