--- a/Core.html
+++ b/Core.html
@@ -21,7 +21,7 @@
     </button>
     </div>
          <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-           <li><a href="index.html">Home</a></li>
+           <li><a href="index.thml">Home</a></li>
            <li><a href="ContactUs.html">Contact US</a></li>
            <li>
              <a href="" data-toggle="dropdown">About US<i class="caret"></i></a>
@@ -40,50 +40,40 @@
 <div class="container">
   <div class="row well well-lg">
     <div class="row">
-      <div class="col-md-6 col-sm-12 col-xs-12 ">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.7014648024174!2d-97.41479314926228!3d18.451858987387467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c5bd3e5f9eabbd%3A0xaa06faacc99fda4a!2sJ.+O.+de+Dom%C3%ADnguez+1505%2C+Libertad%2C+75768+Tehuac%C3%A1n%2C+Pue.!5e0!3m2!1ses!2smx!4v1497376431778" width="500" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-      </div>
-      <div class="col-sm-6 col-xs-12 text-muted">
-        <h2>Dirección:</h2>
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <h2 class="text-muted">Procesador Core i3 Intel</h2>
         <hr>
-        <ul class="list-unstyled">
-          <li><h5>Calle 30 Sur</h5></li>
-          <li>Entre 15 y 17 Poniente</li>
-          <li><h5>Número 1506</h5></li>
-          <li><h5>Colonia Libertad</h5></li>
-          <li><h5>Tehuacán, Puebla</h5></li>
-          <br>
-          <li>Horario:</li>
-          <li>Lunes a Viernes de 8:00 AM a 8:00 PM</li>
-          <li>Sábados y Domingos de 9:00 AM a 2:00 PM</li>
-
+      </div>
+        <hr>
+        <div class="col-md-6 col-sm-6 col-xs-12">
+          <img src="img/Products/core.jpg" alt="">
+        </div>
+      <div class="col-md-6 col-sm-6 col-xs-12 text-muted">
+        <h2>Características:</h2>
+        <ul>
+          <li>Marca Intel</li>
+          <li>5° Generación</li>
+          <li>Frecuencia del procesador 3,9 Ghz</li>
+          <li>LGA 1155</li>
+          <li>Número de nucleos (2)</li>
         </ul>
+        <h2>$2245.00 MXN</h2>
       </div>
     </div>
-    <div class="col-md-12 col-xs-10 col-xs-offset-1 col-sm-offset-0">
-      <h3 class="text-muted">Contactanos en:</h3>
-        <i class="glyphicon glyphicon-envelope "><a href="#"> www.TechSystemOficial@gmail.com</a></i>
-    </div>
-    <div class="col-md-12 col-xs-10 col-xs-offset-1 col-sm-offset-0">
-        <i class="glyphicon glyphicon-earphone">
-          <h5 class="text-muted">Tel:(238)137623</h5>
-        </i>
-    </div>
-    <div class="col-md-12 col-xs-10 col-xs-offset-1 col-sm-offset-0">
-        <i class="fa fa-facebook-square">
-          <h5 class="text-muted">www.Facebook.com/Tech-System</h5>
-        </i>
-    </div>
-  </div>
-</div>
-
-
+    <hr>
+    <form>
+      <div align="center">
+        <input type="button" class="btn btn-primary" value="VOLVER ATRÁS" name="Back2" onclick="history.back()" />
+        </div>
+    </form>
 <div class="container">
   <div class="row">
     <br>
     <br>
     <br>
   </div>
+</div>
+</div>
 </div>
     <div class="footer">
     <div class="container">
