--- a/HardDisk.html
+++ b/HardDisk.html
@@ -41,14 +41,14 @@
   <div class="row well well-lg">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <h2>Disco Duro Seagate 500GB</h2>
+        <h2 class="text-muted">Disco Duro Seagate 500GB</h2>
         <hr>
       </div>
         <hr>
         <div class="col-md-6 col-sm-6 col-xs-12">
           <img src="img/Products/hardisk.jpg" alt="">
         </div>
-      <div class="col-md-6 col-sm-6 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12 text-muted">
         <h2>Características:</h2>
         <ul>
           <li>Marca Seagate</li>
@@ -63,6 +63,11 @@
       </div>
     </div>
     <hr>
+    <form>
+      <div align="center">
+        <input type="button" class="btn btn-primary" value="VOLVER ATRÁS" name="Back2" onclick="history.back()" />
+        </div>
+    </form>
 <div class="container">
   <div class="row">
     <br>
