--- a/Products.html
+++ b/Products.html
@@ -41,36 +41,36 @@
   <div class="row well well-lg">
     <h2>Productos</h2>
     <div class="row">
-      <div class="col-md-6 col-sm-12 col-xs-12 text-center">
+      <div class="col-md-6 col-sm-12 col-xs-12 well well-lg text-center">
         <a href="HardDisk.html"><img src="img/Products/hardisk.jpg" alt=""></a>
         <p>Disco Duro Seagate 500GB</p>
       </div>
-      <div class="col-md-6 col-sm-12 col-xs-12 text-center">
-        <a href="im"><img src="img/Products/ram.jpg" alt=""></a>
+      <div class="col-md-6 col-sm-12 col-xs-12 well well-lg text-center">
+        <a href="RAM.html"><img src="img/Products/ram.jpg" alt=""></a>
         <p>Memoria RAM Adata 4GB</p>
       </div>
     </div>
     <hr>
 
     <div class="row">
-      <div class="col-md-6 col-sm-12 col-xs-12 text-center">
-        <a href="im"><img src="img/Products/motherboard.jpg" alt=""></a>
+      <div class="col-md-6 col-sm-12 col-xs-12 well well-lg text-center">
+        <a href="Motherboard.html"><img src="img/Products/motherboard.jpg" alt=""></a>
         <p>Motherboard Asus 1505</p>
       </div>
-      <div class="col-md-6 col-sm-12 col-xs-12 text-center">
-        <a href="im"><img src="img/Products/core.jpg" alt=""></a>
+      <div class="col-md-6 col-sm-12 col-xs-12 well well-lg text-center">
+        <a href="COre.html"><img src="img/Products/core.jpg" alt=""></a>
         <p>Procesador i3 intel</p>
       </div>
     </div>
     <hr>
 
     <div class="row">
-      <div class="col-md-6 col-sm-12 col-xs-12 text-center">
-        <a href="im"><img src="img/Products/cpu.jpg" alt=""></a>
+      <div class="col-md-6 col-sm-12 col-xs-12 well well-lg text-center">
+        <a href="CPU.html"><img src="img/Products/cpu.jpg" alt=""></a>
         <p>CPU HP 6005</p>
       </div>
-      <div class="col-md-6 col-sm-12 col-xs-12 text-center">
-        <a href="im"><img src="img/Products/kit.jpg" alt=""></a>
+      <div class="col-md-6 col-sm-12 col-xs-12 well well-lg text-center">
+        <a href="kit.html"><img src="img/Products/kit.jpg" alt=""></a>
         <p>Kit Teclado y Mouse Vorago</p>
       </div>
     </div>
