--- a/Services.html
+++ b/Services.html
@@ -51,13 +51,13 @@
       <div class="col-md-4 col-xs-6">
         <i class="glyphicon glyphicon-cloud"></i>
         <h3>Creación de Páginas Web</h3>
-        <p class="text-center text-muted">
+        <p class="text-justify text-muted">
           Contamos con el servicio de creación de páginas web, se personaliza la creación de tu página web según tus necesidades y a la última tendencia con personal capacitado.
       </div>
       <div class="col-md-4 col-xs-6">
         <i class="glyphicon glyphicon-bullhorn"></i>
        <h3>Redes y Telecomunicaciones</h3>
-       <p class="text-center text-muted">
+       <p class="text-justify text-muted">
           Contamos con el servicio de creación de Redes LAN, WAN así como enlaces Punto a Punto para que así puedas comunicar sus direfentes sucursales.
       </p>
     </div>
@@ -66,8 +66,9 @@
     <br>
 
     <div class="row">
+      
       <div class="col-md-2 col-xs-10 col-xs-offset-1 col-sm-offset-0">
-        <ul class="list-unstyle list-inline features">
+        <ul class="list-unstyle list-inline features text-muted">
             <li>Se realiza:</li>
             <li>-Formateo del Equipo</li>
             <li>-Limpieza de Equipo</li>
@@ -80,7 +81,7 @@
       </div>
 
       <div class="col-md-2 col-xs-10 col-xs-offset-1 col-sm-offset-0">
-        <ul class="list-unstyle list-inline features">
+        <ul class="list-unstyle list-inline features text-muted">
           <li>Se realiza:</li>
           <li>-Páginas Personalizadas</li>
           <li>-Lenguajes html, css, php.</li>
@@ -93,7 +94,7 @@
       </div>
 
       <div class="col-md-2 col-xs-10 col-xs-offset-1 col-sm-offset-0">
-        <ul class="list-unstyle list-inline features">
+        <ul class="list-unstyle list-inline features text-muted">
             <li>Se realiza:</li>
             <li>-Enlaces Punto a Punto</li>
             <li>-Redes LAN y WAN</li>
@@ -106,6 +107,7 @@
 
 
     </div>
+    <hr>
 
   </div>
 </div>
