--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </button>
     </div>
          <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-           <li><a href="index.thml">Home</a></li>
+           <li><a href="index.html">Home</a></li>
            <li><a href="ContactUs.html">Contact US</a></li>
            <li>
              <a href="" data-toggle="dropdown">About US<i class="caret"></i></a>
@@ -44,7 +44,7 @@
       <img src="img/logo.png" alt="My picture">
     </div>
 
-    <div class="col-sm-6 col-xs-12 lead text-justify">
+    <div class="col-sm-6 col-xs-12 lead text-justify text-muted">
       <h2>Tech-System</h2>
       <br>
       <h4>Somos una empresa dedicada al servicio y distribución de equipos computacionales, servicio técnico y mantenimiento de equipos así como expertos en la rama de redes y telecomunicaciones. Ofreciendo una solución global a empresas tanto macro como micro, profesionales, administraciones y usuarios particulares, a todo el territorio nacional. Somos su mejor oferta en cuanto a resolver sus problemas dentro del área de las Tics, no dude más y conócenos mejor.</h4>
@@ -91,18 +91,6 @@
   </div>
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
