--- a/About.html
+++ b/About.html
@@ -39,10 +39,10 @@
 
 <div class="container">
   <div class="row well well-lg">
-    <h2>Who We Are</h2>
+    <h2 class="text-muted">¿Quiénes Somos?</h2>
     <hr>
     <div class="row">
-      <div class="col-sm-6 col-xs-12 text-justify">
+      <div class="col-sm-6 col-xs-12 text-justify text-muted">
         <h4>La empresa “Tech-Sytem” es creada  por jóvenes estudiantes de la carrera de Tecnologías de la información  en su octavo cuatrimestre en el mes de septiembre  del año 2016 en la Universidad Tecnologica de Tehuacán, esta empresa surge como el resultado de un proyecto de una materia llamada "Administración de Proyectos" que ofrece la misma carrera. La empresa “Tech-System” cuyo giró empresarial son las Redes y Telecomunicaciones radica en la ciudad de Tehuacán. </h4>
       </div>
       <div class="col-md-5 col-sm-4 col-xs-6 visible-md visible-lg text-center">
@@ -50,9 +50,9 @@
       </div>
     </div>
     <hr>
-    <h2>Mision</h2>
+    <h2 class="text-muted">Misión</h2>
     <div class="row">
-      <div class="col-sm-6 col-xs-12 text-justify">
+      <div class="col-sm-6 col-xs-12 text-justify text-muted">
         <h4>Somos una empresa dedicada al servicio y distribución de equipos computacionales, servicio técnico y mantenimiento de equipos así como expertos en la rama de redes y telecomunicaciones. Ofreciendo una solución global a empresas, profesionales, administraciones y usuarios particulares, a todo el territorio nacional.</h4>
       </div>
       <div class="col-md-5 col-sm-4 col-xs-6 visible-md visible-lg text-center">
@@ -60,9 +60,9 @@
       </div>
     </div>
     <hr>
-    <h2>Vision</h2>
+    <h2 class="text-muted">Vision</h2>
     <div class="row">
-      <div class="col-sm-6 col-xs-12 text-justify">
+      <div class="col-sm-6 col-xs-12 text-justify text-muted">
         <h4>Ser una empresa líder en el mercado nacional dentro del área de las TIC, y para ello seremos expertos en todos los servicios que ofrecemos actualmente incrementando la calidad en los mismos así como la innovación debido a la necesidad de cambio provocado por los avances tecnológicos. </h4>
       </div>
       <div class="col-md-5 col-sm-4 col-xs-6 visible-md visible-lg text-center">
@@ -72,8 +72,8 @@
     <hr>
     <div class="row">
       <div class="col-sm-6 col-xs-12 text-justify">
-        <h2>Valors</h2>
-        <ul>
+        <h2 class="text-muted">Valores</h2>
+        <ul class="text-muted">
           <li><h4>Universalidad</h4></li>
           <li><h4>Compromiso</h4></li>
           <li><h4>Trabajo en equipo</h4></li>
